@@ -5,6 +5,7 @@
 	* doc/libunistring.texi (Licenses): Change accordingly.
 	* autogen.sh: Pass option --lgpl=3orGPLv2 to gnulib-tool.
 	Reported by Nikos Mavrogiannopoulos.
+	* gnulib-m4/gnulib-cache.m4: Regenerated.
 
 2016-12-02  Bruno Haible  <bruno@clisp.org>
 
